--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -12,5 +12,7 @@ jobs:
    container:
      image: node:20-alpine
    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
     - name: Ordino Tests
       uses: ORDINO-AI-LLC/github-action@v4
