--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -16,3 +16,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Ordino Tests
       uses: ORDINO-AI-LLC/github-action@v4
+      with:
+        test-framework: 'playwright'
+        ordino-key: ${{ secrets.ORDINO_KEY }}
+        project-id: ${{ secrets.PROJECT_ID }}
