--- a/.github/workflows/config.yaml
+++ b/.github/workflows/config.yaml
@@ -5,19 +5,38 @@ on:
   pull_request:
     branches: [main, develop]
 
+# For parallel Playwright tests
 jobs:
-  test:
+  run-tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        shard: [1, 2]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      
-      - name: Run Ordino Tests
-        uses: ORDINO-AI-LLC/github-action@v8
+      - uses: actions/checkout@v4
+      - uses: ORDINO-AI-LLC/github-action@v11
         with:
           test-framework: 'playwright'
+          total-shards: '2'
+          shard-index: '${{ matrix.shard }}'
+          skip-upload: 'true'
+      
+      - uses: actions/upload-artifact@v4
+        with:
+          name: playwright-report-${{ matrix.shard }}
+          path: ordino-report/
+
+  upload-report:
+    needs: run-tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          pattern: playwright-report-*
+          path: all-reports/
+      
+      - uses: ORDINO-AI-LLC/github-action@v11
+        with:
+          test-framework: 'playwright'
+          action-mode: 'merge-and-upload'
